[package]
name = "r-quick-share"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = "0.14"
directories = "5.0"
fern = { version = "0.6", features = ["colored"] }
humantime = "2.1"
log = "0.4"
notify-rust = "4.10"
open = "5.0"
rqs_lib = { path = "../../core_lib", features = ["experimental"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys_metrics = "0.2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
